<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clerigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/tower"
            android:scaleType="centerCrop"
            android:src="@drawable/puro" />

        <TextView
            android:id="@+id/text_name_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clerigos"
            android:padding="10dp"
            android:text="@string/puro"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/heart_svg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clerigos"
            android:layout_marginStart="300dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/heart_icon"
            android:src="@drawable/ic_heart" />

        <View
            android:id="@+id/devider"
            style="@style/Divider" />

        <ImageView
            android:id="@+id/ic_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/devider"
            android:layout_marginStart="65dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ic_nearby"
            android:src="@drawable/ic_nearby" />

        <ImageView
            android:id="@+id/ic_two_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/devider"
            android:layout_marginStart="135dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ic_two_arrows"
            android:src="@drawable/ic_two_arrows" />

        <ImageView
            android:id="@+id/grid_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/devider"
            android:layout_marginStart="205dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/grid_world"
            android:src="@drawable/ic_grid_world" />

        <ImageView
            android:id="@+id/ic_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/devider"
            android:layout_marginStart="275dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ic_share"
            android:src="@drawable/ic_connections" />


        <View
            android:id="@+id/devider_2"
            style="@style/Divider"
            android:layout_marginTop="65dp" />

        <TextView
            android:id="@+id/tower_clericos_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devider_2"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:text="@string/clerigos_tower_des" />

        <View
            android:id="@+id/devider_3"
            style="@style/Divider"
            android:layout_below="@id/tower_clericos_des"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devider_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/save_up_to_10_online" />

        <Button
            android:id="@+id/get_directions"
            style="@style/SubmitButtonStyle"
            android:layout_below="@id/discount"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/get_direction"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>