<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/clerigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/tower"
        android:scaleType="centerCrop"
        android:src="@drawable/clerigos" />

    <TextView
        android:id="@+id/text_name_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clerigos"
        android:padding="10dp"
        android:text="@string/clerigos_tower"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/heart_svg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clerigos"
        android:layout_marginStart="300dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/heart_icon"
        android:src="@drawable/ic_heart" />

</RelativeLayout>